# template-haskell

./: .envrc  .gitignore  CHANGES.md  Setup.hs  default.nix  flake.nix  hello.cabal  hs-template-name.cabal  shell.nix
.gitea/: post-create-script.sh  template
app/: Main.hs  hello.hs
nix/: sources.json
