cabal-version:      2.4
name:               hs-template-name
version:            0.0.0
synopsis:           :TODO:
homepage:           https://github.com/pjones/hs-template-name
bug-reports:        https://github.com/pjones/hs-template-name/issues
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Peter Jones <pjones@devalot.com>
maintainer:         Peter Jones <pjones@devalot.com>
copyright:          Copyright (c) :YEAR: Peter J. Jones
category:           :TODO:
stability:          experimental
build-type:         Simple
description:        :TODO:

--------------------------------------------------------------------------------
extra-source-files:
  CHANGES.md
  README.md

--------------------------------------------------------------------------------
source-repository head
  type:     git
  location: https://github.com/pjones/hs-template-name.git

--------------------------------------------------------------------------------
common options
  default-language: Haskell2010
  ghc-options:
    -Wall -Wno-name-shadowing -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns -Werror=missing-home-modules
    -Widentities -Wmissing-export-lists -Wredundant-constraints

--------------------------------------------------------------------------------
common extensions
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeOperators
    ViewPatterns

--------------------------------------------------------------------------------
common dependencies
  build-depends:
    , base    >=4.6 && <5.0
    , relude  >=0.7 && <=1.1

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Extra.Map)

--------------------------------------------------------------------------------
library
  import:          options, extensions, dependencies
  hs-source-dirs:  src
  exposed-modules:

--------------------------------------------------------------------------------
executable hs-template-name
  import:         options, extensions, dependencies
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  hs-template-name
